--- a/css/sm.css
+++ b/css/sm.css
@@ -16,7 +16,7 @@
     .container > .row > .col-sm-1{
         float:left;
         width:8.333333333%;
-        height:auto;
+        /*height:auto;*/
         overflow:hidden;
         padding:0 15px;
         box-sizing:border-box;
@@ -24,7 +24,7 @@
     .container > .row > .col-sm-2{
         float:left;
         width:16.6666666666%;
-        height:auto;
+        /*height:auto;*/
         overflow:hidden;
         padding:0 15px;
         box-sizing:border-box;
@@ -32,7 +32,7 @@
     .container > .row > .col-sm-3{
         float:left;
         width:25%;
-        height:auto;
+        /*height:auto;*/
         overflow:hidden;
         padding:0 15px;
         box-sizing:border-box;
@@ -40,7 +40,7 @@
     .container > .row > .col-sm-4{
         float:left;
         width:33.333333333%;
-        height:auto;
+        /*height:auto;*/
         overflow:hidden;
         padding:0 15px;
         box-sizing:border-box;
@@ -48,7 +48,7 @@
     .container > .row > .col-sm-5{
         float:left;
         width:41.6666666666%;
-        height:auto;
+        /*height:auto;*/
         overflow:hidden;
         padding:0 15px;
         box-sizing:border-box;
@@ -56,7 +56,7 @@
     .container > .row > .col-sm-6{
         float:left;
         width:50%;
-        height:auto;
+        /*height:auto;*/
         overflow:hidden;
         padding:0 15px;
         box-sizing:border-box;
@@ -64,7 +64,7 @@
     .container > .row > .col-sm-7{
         float:left;
         width:58.333333333%;
-        height:auto;
+        /*height:auto;*/
         overflow:hidden;
         padding:0 15px;
         box-sizing:border-box;
@@ -72,7 +72,7 @@
     .container > .row > .col-sm-8{
         float:left;
         width:66.6666666666%;
-        height:auto;
+        /*height:auto;*/
         overflow:hidden;
         padding:0 15px;
         box-sizing:border-box;
@@ -80,7 +80,7 @@
     .container > .row > .col-sm-9{
         float:left;
         width:75%;
-        height:auto;
+        /*height:auto;*/
         overflow:hidden;
         padding:0 15px;
         box-sizing:border-box;
@@ -88,7 +88,7 @@
     .container > .row > .col-sm-10{
         float:left;
         width:83.3333333333%;
-        height:auto;
+        /*height:auto;*/
         overflow:hidden;
         padding:0 15px;
         box-sizing:border-box;
@@ -96,7 +96,7 @@
     .container > .row > .col-sm-11{
         float:left;
         width:91.6666666666%;
-        height:auto;
+        /*height:auto;*/
         overflow:hidden;
         padding:0 15px;
         box-sizing:border-box;
@@ -104,7 +104,7 @@
     .container > .row > .col-sm-12{
         float:left;
         width:100%;
-        height:auto;
+        /*height:auto;*/
         overflow:hidden;
         padding:0 15px;
         box-sizing:border-box;
